--- a/html/liuyanban.html
+++ b/html/liuyanban.html
@@ -41,7 +41,7 @@
                     </ol>
                 </div>
             </li>
-            <li><a href="#">唯美相册</a>
+            <li><a href="webEcharts.html">web前端</a>
                 <div class="nav_div"  style="display:none">
                     <ol>
                         <li><a href="#">个人文档</a></li>
