--- a/html/moban.html
+++ b/html/moban.html
@@ -18,8 +18,8 @@
     <div class="head_right">
         <ul id="nav_list" class="nav">
             <li><a class="a"href="../index.html">首页</a></li>
-            <li><a href="#">我的世界</a></li>
-            <li><a href="web.html">Web前端</a>
+            <li><a href="world.html">我的世界</a></li>
+            <li><a href="webEcharts.html">Web前端</a>
             <li><a href="liuyanban.html">留言版</a></li>
             <li><a href="mv.html">闲言碎语</a> </li>
             <li><a href="study.html">学无止境</a></li>
