--- a/html/mv.html
+++ b/html/mv.html
@@ -47,22 +47,8 @@
 
         <ul id="nav_list" class="nav">
             <li><a class="a"href="../index.html">首页</a></li>
-            <li><a href="#">我的世界</a>
-                <div class="nav_div">
-                    <ol>
-                        <li><a href="#">我的文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li><a href="web.html">Web前端</a>
+            <li><a href="world.html">我的世界</a></li>
+            <li><a href="webEcharts.html">Web前端</a>
                 <div class="nav_div"  style="display:none">
                     <ol>
                         <li><a href="#">个人文档</a></li>
@@ -81,24 +67,7 @@
                 </div>
             </li>
             <li><a href="liuyanban.html">留言版</a></li>
-            <li><a href="mv.html">闲言碎语</a>
-                <div class="nav_div" style="display:none">
-                    <ol>
-                        <li><a href="#">个人文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                    </ol>
-                </div>
-            </li>
+            <li><a href="mv.html">闲言碎语</a></li>
             <li><a href="study.html">学无止境</a></li>
             <li><a href="moban.html">模板展示</a></li>
         </ul>
