--- a/html/study.html
+++ b/html/study.html
@@ -24,7 +24,7 @@
     <div class="head_right">
         <ul id="nav_list" class="nav">
             <li><a class="a" href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a><li><a href="#">唯美相册</a>
+            <li><a href="world.html">我的世界</a><li><a href="webEcharts.html">web前端</a>
             <div class="nav_div"  style="display:none">
                 <ol>
                     <li><a href="#">个人文档</a></li>
