--- a/html/world.html
+++ b/html/world.html
@@ -23,7 +23,7 @@
     <div class="head_right">
         <ul id="nav_list" class="nav">
             <li><a class="a" href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a><li><a href="web.html">web前端</a>
+            <li><a href="world.html">我的世界</a><li><a href="webEcharts.html">web前端</a>
             </li>
             <li><a href="liuyanban.html">留言版</a></li>
             <li><a href="mv.html">闲言碎语</a> </li>
@@ -76,11 +76,11 @@
     <div class="main_wt">
         <div class="main_wtL fl">
             <ul>
-                <li style="display:block;"><img src="../images/1.jpg"/></imag></li>
-                <li><img src="../images/2.jpg"/></imag></li>
-                <li><img src="../images/3.jpg"/></imag></li>
-                <li><img src="../images/san2.jpg"/></imag></li>
-                <li><img src="../images/book2.jpg"/></imag></li>
+                <li style="display:block;"><img src="../images/1.jpg"/></li>
+                <li><img src="../images/2.jpg"/></li>
+                <li><img src="../images/3.jpg"/></li>
+                <li><img src="../images/san2.jpg"/></li>
+                <li><img src="../images/book2.jpg"/></li>
             </ul>
             <ol>
                 <li></li>
