--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ol>
                 </div>
             </li>
-            <li><a href="html/web.html">Web前端</a>
+            <li><a href="html/webEcharts.html">Web前端</a>
                 <div class="nav_div"  style="display:none">
                     <ol>
                         <li><a href="#">个人文档</a></li>
