--- a/index.html
+++ b/index.html
@@ -60,43 +60,9 @@
                     </ol>
                 </div>
             </li>
-            <li><a href="html/webEcharts.html">Web前端</a>
-                <div class="nav_div"  style="display:none">
-                    <ol>
-                        <li><a href="#">个人文档</a></li>
-                        <li><a href="http://localhost/musicdianbo/html/index2.html">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                    </ol>
-                </div>
-            </li>
+            <li><a href="html/webEcharts.html">Web前端</a></li>
             <li><a href="html/liuyanban.html">留言版</a></li>
-            <li><a href="html/mv.html">闲言碎语</a>
-                <div class="nav_div" style="display:none">
-                    <ol>
-                        <li><a href="#">个人文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                    </ol>
-                </div>
-            </li>
+            <li><a href="html/mv.html">闲言碎语</a></li>
             <li><a href="html/study.html">学无止境</a></li>
             <li><a href="html/moban.html">模板展示</a></li>
         </ul>
