--- a/html/webEcharts.html
+++ b/html/webEcharts.html
@@ -12,7 +12,7 @@
 <script src="../js/mv.js"></script>
 <script src="../js/echarts.common.min.js"></script>
 <style>
-    #box{width:85%;height:500px;background:lightpink;margin:5% auto;padding-top:3%;}
+    #box{width:85%;height:500px;background:url(../images/ecahrtbg.jpg);background-size:100% 100%;margin:1% auto;padding-top:3%;}
 </style>
 <body>
 <p class="header">
