--- a/html/liuyanban.html
+++ b/html/liuyanban.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>留言板</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/liuyanban.css" rel="stylesheet"/>
 <link href="../css/publick.css" rel="stylesheet"/>
@@ -11,12 +12,33 @@
 <script src="../js/publick.js"></script>
 <script src="../js/liuyan.js"></script>
 <body>
+<p class="header">
+    <a class="login" href="login.html">登录</a>
+    <a class="huanfu" href="#">换肤</a>
+</p>
+<div class="huanfu_box">
+    <img src="../images/close.svg" class='close'/>
+    <ul>
+        <li><img src="../images/1.jpg"/></li>
+        <li><img src="../images/2.jpg"/></li>
+        <li><img src="../images/3.jpg"/></li>
+        <li><img src="../images/15.jpg"/></li>
+        <li><img src="../images/5.jpg"/></li>
+        <li><img src="../images/6.jpg"/></li>
+        <li><img src="../images/7.jpg"/></li>
+        <li><img src="../images/8.jpg"/></li>
+        <li><img src="../images/10.jpg"/></li>
+        <li><img src="../images/11.jpg"/></li>
+        <li><img src="../images/12.jpg"/></li>
+        <li><img src="../images/16.jpg"/></li>
+    </ul>
+</div>
+
 <div class="head">
     <div class="head_left">
         <p class="touxiang fl"><img src="../images/touxiang2.jpg"></p>
         <span class="my_name fl">半夏微凉$不言殇</span>
         <p class="qianming fr">
-            <strong class="flay">签名：</strong><br/>
             <span class="flay">你，生命中最重要的过客，之所以是过客，因为你未曾为我停留。</span>
             <span class="flay">心之所想，行之所至;人生若只如初见，何事秋风悲画扇</span>
             <span class="flay">撑着一苇江湖；等到云歇雨住，揽把稻香扶风看日出，浮生焕........</span>
@@ -116,9 +138,9 @@
         </div>
         <!--/*时钟结束*/-->
         <!--天气开始-->
-        <div class="wheather fr" style="top:75px;">
+        <div class="wheather fr">
             <p> <span class="span1">天水</span><span class="span1">空气质量<em class="good">优</em></span></p>
-            <p><img src="../images/sun.jpg"/><span class="span1">今晴</span><span class="span2">15~25℃</span></p>
+            <p><img src="../images/sun.jpg"/> <span class="span1">今晴</span><span class="span2">15~25℃</span></p>
         </div>
         <!--天气结束-->
     </div>
@@ -182,6 +204,18 @@
         </div>
         <div id="showMore">显示更多...</div>
     </div>
+</div>
+<div class="bottom">
+    <ul>
+        <li><a href="http://www.miaov.com/">妙味课堂</a></li>
+        <li><a href="http://tuiwuwang.com/">无锡CEO</a></li>
+        <li><a href="http://www.liuyuyao.com/">刘玉尧博客 </a></li>
+        <li><a href="http://www.hjj5.com/">何晶晶博客</a></li>
+        <li><a href="http://www.jinxinblog.com/"> web前端 </a></li>
+        <li><a href="http://tuku.hongyaxuan.com/">中式装修图库</a></li>
+        <li><a href="http://www.tymood.com/"> 心情簿</a></li>
+    </ul>
+    <p>Design by 半夏微凉$不言殇 友情链接QQ：2642316974</p>
 </div>
 </body>
 </html>
