--- a/html/world.html
+++ b/html/world.html
@@ -2,14 +2,36 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>我的世界</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/publick.css" rel="stylesheet"/>
 <script src="../js/jquery-1.11.1.min.js"></script>
 <link href="../css/study.css" rel="stylesheet"/>
 <script src="../js/publick.js"></script>
 <script src="../js/world.js"></script>
-<body style="background:url(../images/bg12.JPG);background-size:1366px 1200px;">
+<body style="background:url(../images/55.jpg);background-size:1366px 1200px;">
+<p class="header">
+    <a class="login" href="login.html">登录</a>
+    <a class="huanfu" href="#">换肤</a>
+</p>
+<div class="huanfu_box">
+    <img src="../images/close.svg" class='close'/>
+    <ul>
+        <li><img src="../images/1.jpg"/></li>
+        <li><img src="../images/2.jpg"/></li>
+        <li><img src="../images/3.jpg"/></li>
+        <li><img src="../images/15.jpg"/></li>
+        <li><img src="../images/5.jpg"/></li>
+        <li><img src="../images/6.jpg"/></li>
+        <li><img src="../images/7.jpg"/></li>
+        <li><img src="../images/8.jpg"/></li>
+        <li><img src="../images/10.jpg"/></li>
+        <li><img src="../images/11.jpg"/></li>
+        <li><img src="../images/12.jpg"/></li>
+        <li><img src="../images/16.jpg"/></li>
+    </ul>
+</div>
 <div class="head">
     <div class="head_left">
         <p class="touxiang fl"><img src="../images/touxiang2.jpg"></p>
@@ -65,7 +87,7 @@
         </div>
         <!--/*时钟结束*/-->
         <!--天气开始-->
-        <div class="wheather fr" style="top:75px;">
+        <div class="wheather fr">
             <p> <span class="span1">天水</span><span class="span1">空气质量<em class="good">优</em></span></p>
             <p><img src="../images/sun.jpg"/> <span class="span1">今晴</span><span class="span2">15~25℃</span></p>
         </div>
