--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>blog半夏微凉$不言殇</title>
+    <link href="./favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="css/publick.css" rel="stylesheet"/>
 <link href="css/style.css" rel="stylesheet"/>
@@ -36,7 +37,7 @@
         <p class="touxiang fl"><img src="images/touxiang2.jpg"></p>
         <span class="my_name fl">半夏微凉$不言殇</span>
         <p class="qianming fr">
-            <strong class="flay">签名：</strong><br/>
+
             <span class="flay">你，生命中最重要的过客，之所以是过客，因为你未曾为我停留。</span>
             <span class="flay">心之所想，行之所至;人生若只如初见，何事秋风悲画扇</span>
             <span class="flay">撑着一苇江湖；等到云歇雨住，揽把稻香扶风看日出，浮生焕........</span>
@@ -143,7 +144,7 @@
 <div class="main">
     <!--最先推荐开始-->
     <div class="main_left fl">
-        <img src="images/tuijian.png" class="tuijian_img"/>
+      <img src="images/tuijian.png" class="tuijian_img"/>
         <div class="tuijian">
             <ul>
                 <li><span>1</span><a href="#">什么是静态和动态网页？</a></li>
@@ -291,7 +292,7 @@
             </div>
         </div>
         <p class="ambit fl">
-            <img src="images/24.jpg">
+            <img src="images/js.jpg">
         </p>
         <!--轮播图结束-->
         <!--文章推荐开始-->
