--- a/html/login.html
+++ b/html/login.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>登录</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/login.css" rel="stylesheet"/>
 <script src="../js/jquery-1.11.1.min.js"></script>
