--- a/html/moban.html
+++ b/html/moban.html
@@ -2,29 +2,114 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>模板展示</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/publick.css" rel="stylesheet"/>
 <link href="../css/moban.css" rel="stylesheet"/>
+<link href="../css/study.css" rel="stylesheet"/>
 <link href="../css/style.css" rel="stylesheet"/>
 <script src="../js/jquery-1.11.1.min.js"></script>
 <script src="../js/moban.js"></script>
+<script src="../js/publick.js"></script>
 <body>
+<p class="header">
+    <a class="login" href="login.html">登录</a>
+    <a class="huanfu" href="#">换肤</a>
+</p>
+<div class="huanfu_box">
+    <img src="../images/close.svg" class='close'/>
+    <ul>
+        <li><img src="../images/1.jpg"/></li>
+        <li><img src="../images/2.jpg"/></li>
+        <li><img src="../images/3.jpg"/></li>
+        <li><img src="../images/15.jpg"/></li>
+        <li><img src="../images/5.jpg"/></li>
+        <li><img src="../images/6.jpg"/></li>
+        <li><img src="../images/7.jpg"/></li>
+        <li><img src="../images/8.jpg"/></li>
+        <li><img src="../images/10.jpg"/></li>
+        <li><img src="../images/11.jpg"/></li>
+        <li><img src="../images/12.jpg"/></li>
+        <li><img src="../images/16.jpg"/></li>
+    </ul>
+</div>
 <div class="head">
     <div class="head_left">
         <p class="touxiang fl"><img src="../images/touxiang2.jpg"></p>
         <span class="my_name fl">半夏微凉$不言殇</span>
+        <p class="qianming fr">
+            <span class="flay">人生，是一场盛大的遇见</span>
+            <span class="flay">我长路漫漫，只因学无止境</span>
+            <span class="flay">趁我们还年轻，多欣赏沿途的风景，不要错过了流年里的人和物~~</span>
+        </p>
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a"href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a></li>
-            <li><a href="webEcharts.html">Web前端</a>
+            <li><a class="a" href="../index.html">首页</a></li>
+            <li><a href="world.html">我的世界</a><li><a href="webEcharts.html">web前端</a>
+            <div class="nav_div"  style="display:none">
+                <ol>
+                    <li><a href="#">个人文档</a></li>
+                    <li><a href="http://localhost/musicdianbo/html/index2.html">我的乐库</a></li>
+                    <li><a href="#">慢生活</a></li>
+                    <li><a href="#">旅行</a></li>
+                    <li><a href="#">我的梦</a></li>
+                    <li><a href="#">生涯</a></li>
+                    <li><a href="#">我的好友</a></li>
+                    <li><a href="#">最近心情</a></li>
+                    <li><a href="#">我的乐库</a></li>
+                    <li><a href="#">我的梦</a></li>
+                    <li><a href="#">生涯</a></li>
+                    <li><a href="#">我的好友</a></li>
+                </ol>
+            </div>
+        </li>
             <li><a href="liuyanban.html">留言版</a></li>
             <li><a href="mv.html">闲言碎语</a> </li>
             <li><a href="study.html">学无止境</a></li>
-            <li><a href="#">模板展示</a></li>
+            <li><a href="moban.html">模板展示</a></li>
         </ul>
+        <!--/*时钟开始*/-->
+        <div id="fancyClock">
+            <div class="orange clock">
+                <div class="display" id="hours">00</div>
+                <div class="front left"></div>
+                <div class="rotate left" id="orangeRotateLeft">
+                    <div class="bg left"></div>
+                </div>
+                <div class="rotate right" id="orangeRotateRight">
+                    <div class="bg right"></div>
+                </div>
+            </div>
+            <div class="blue clock">
+                <div class="display" id="minuts">00</div>
+                <div class="front left"></div>
+                <div class="rotate left" id="blueRotateLeft">
+                    <div class="bg left"></div>
+                </div>
+                <div class="rotate right" id="blueRotateRight">
+                    <div class="bg right"></div>
+                </div>
+            </div>
+            <div class="green clock">
+                <div class="display" id="seconds">00</div>
+                <div class="front left"></div>
+                <div class="rotate left" id="greenRotateLeft">
+                    <div class="bg left"></div>
+                </div>
+                <div class="rotate right" id="greenRotateRight">
+                    <div class="bg right"></div>
+                </div>
+            </div>
+        </div>
+        <!--/*时钟结束*/-->
+        <!--天气开始-->
+        <div class="wheather fr">
+            <p> <span class="span1">天水</span><span class="span1">空气质量<em class="good">优</em></span></p>
+            <p><img src="../images/sun.jpg"/> <span class="span1">今晴</span><span class="span2">15~25℃</span></p>
+        </div>
+        <!--天气结束-->
     </div>
 </div>
 <div class="main">
@@ -74,7 +159,7 @@
                <p class="sear_p"> <input type="text" class="text" placeholder="搜索"/><img src="../images/search.svg" class="sear_img"/></p>
             </div>
            <!--最新文章开始-->
-            <p class="hot_title"><img src="../images/Web (1).svg"class="fl"/>最新文章<span class="fr" style="width:50%;"></span></p>
+            <p class="hot_title"><img src="../images/Web (1).svg"class="fl"/>最新文章<span class="fr" style="width:60%;"></span></p>
             <div class="tuijian hot muban">
                 <ul>
                     <li><span>1</span><a href="#">IP要突破2000+了</a></li>
@@ -91,7 +176,7 @@
             </div>
             <!--最新文章开始-->
             <!--个人模板展示开始-->
-            <p class="hot_title"><img src="../images/Web (1).svg"class="fl"/>模板展示<span class="fr" style="width:50%;"></span></p>
+            <p class="hot_title"><img src="../images/Web (1).svg"class="fl"/>模板展示<span class="fr" style="width:60%;"></span></p>
             <div class="tuijian muban1">
                 <ul class="mb_ul">
                     <li><a>个人模板</a></li>
@@ -168,7 +253,7 @@
             </div>
             <!--个人模板展示结束-->
             <!--最新模板开始-->
-            <p class="hot_title" style="margin-top:25px"><img src="../images/Web (1).svg"class="fl"/>最新模板<span class="fr" style="width:50%;"></span></p>
+            <p class="hot_title" style="margin-top:25px"><img src="../images/Web (1).svg"class="fl"/>最新模板<span class="fr" style="width:60%;"></span></p>
             <div class="tuijian hot muban">
                 <ul>
                     <li><span>1</span><a href="http://www.yangqq.com/download/div/2016-09-11/752.html">个人博客评测，你敢来，我就敢说！（第一</a></li>
