--- a/html/mv.html
+++ b/html/mv.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>mv播放</title>
+    <title>闲言碎语</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/publick.css" rel="stylesheet"/>
 <link href="../css/mv.css" rel="stylesheet"/>
@@ -37,7 +38,6 @@
         <p class="touxiang fl"><img src="../images/touxiang2.jpg"></p>
         <span class="my_name fl">半夏微凉$不言殇</span>
         <p class="qianming fr">
-            <strong class="flay">签名：</strong><br/>
             <span class="flay">你，生命中最重要的过客，之所以是过客，因为你未曾为我停留。</span>
             <span class="flay">心之所想，行之所至;人生若只如初见，何事秋风悲画扇</span>
             <span class="flay">撑着一苇江湖；等到云歇雨住，揽把稻香扶风看日出，浮生焕........</span>
