--- a/html/webEcharts.html
+++ b/html/webEcharts.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>简单图表</title>
+    <title>web前端</title>
+    <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/publick.css" rel="stylesheet"/>
 <link href="../css/mv.css" rel="stylesheet"/>
@@ -41,7 +42,6 @@
         <p class="touxiang fl"><img src="../images/touxiang2.jpg"></p>
         <span class="my_name fl">半夏微凉$不言殇</span>
         <p class="qianming fr">
-            <strong class="flay">签名：</strong><br/>
             <span class="flay">你，生命中最重要的过客，之所以是过客，因为你未曾为我停留。</span>
             <span class="flay">心之所想，行之所至;人生若只如初见，何事秋风悲画扇</span>
             <span class="flay">撑着一苇江湖；等到云歇雨住，揽把稻香扶风看日出，浮生焕........</span>
@@ -50,7 +50,7 @@
     <div class="head_right">
 
         <ul id="nav_list" class="nav">
-            <li><a class="a"href="../index.html">首页</a></li>
+            <li><a class="a" href="../index.html">首页</a></li>
             <li><a href="world.html">我的世界</a></li>
             <li><a href="webEcharts.html">Web前端</a>
                 <div class="nav_div"  style="display:none">
@@ -121,6 +121,18 @@
     <div id="cyclinder" style="width:31%;height:80%;float:left;"></div>
     <div id="circle" style="width:31%;height:80%;float:left;"></div>
     <div id="discounting" style="width:31%;height:80%;float:left;"></div>
+</div>
+<div class="bottom">
+    <ul>
+        <li><a href="http://www.miaov.com/">妙味课堂</a></li>
+        <li><a href="http://tuiwuwang.com/">无锡CEO</a></li>
+        <li><a href="http://www.liuyuyao.com/">刘玉尧博客 </a></li>
+        <li><a href="http://www.hjj5.com/">何晶晶博客</a></li>
+        <li><a href="http://www.jinxinblog.com/"> web前端 </a></li>
+        <li><a href="http://tuku.hongyaxuan.com/">中式装修图库</a></li>
+        <li><a href="http://www.tymood.com/"> 心情簿</a></li>
+    </ul>
+    <p>Design by 半夏微凉$不言殇 友情链接QQ：2642316974</p>
 </div>
 <script type="text/javascript">
     var cyclinder=document.getElementById("cyclinder");
