--- a/html/study.html
+++ b/html/study.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>学无止境</title>
+    <title>闲言碎语</title>
     <link href="../favicon-.ico" rel="icon" type="image/x-icon"/>
 </head>
 <link href="../css/publick.css" rel="stylesheet"/>
@@ -45,29 +45,29 @@
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a" href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a><li><a href="webEcharts.html">web前端</a>
+            <li><a class="a" href="../index.html" target="_blank">首页</a></li>
+            <li><a href="world.html" target="_blank">我的世界</a><li><a href="webEcharts.html">web前端</a>
             <div class="nav_div"  style="display:none">
                 <ol>
-                    <li><a href="#">个人文档</a></li>
-                    <li><a href="http://localhost/musicdianbo/html/index2.html">我的乐库</a></li>
-                    <li><a href="#">慢生活</a></li>
-                    <li><a href="#">旅行</a></li>
-                    <li><a href="#">我的梦</a></li>
-                    <li><a href="#">生涯</a></li>
-                    <li><a href="#">我的好友</a></li>
-                    <li><a href="#">最近心情</a></li>
-                    <li><a href="#">我的乐库</a></li>
-                    <li><a href="#">我的梦</a></li>
-                    <li><a href="#">生涯</a></li>
-                    <li><a href="#">我的好友</a></li>
+                    <li><a href="#" target="_blank">个人文档</a></li>
+                    <li><a href="http://localhost/musicdianbo/html/index2.html" target="_blank">我的乐库</a></li>
+                    <li><a href="#" target="_blank">慢生活</a></li>
+                    <li><a href="#" target="_blank">旅行</a></li>
+                    <li><a href="#" target="_blank">我的梦</a></li>
+                    <li><a href="#" target="_blank">生涯</a></li>
+                    <li><a href="#" target="_blank">我的好友</a></li>
+                    <li><a href="#" target="_blank">最近心情</a></li>
+                    <li><a href="#" target="_blank">我的乐库</a></li>
+                    <li><a href="#" target="_blank">我的梦</a></li>
+                    <li><a href="#" target="_blank">生涯</a></li>
+                    <li><a href="#" target="_blank">我的好友</a></li>
                 </ol>
             </div>
         </li>
-            <li><a href="liuyanban.html">留言版</a></li>
-            <li><a href="mv.html">闲言碎语</a> </li>
-            <li><a href="study.html">学无止境</a></li>
-            <li><a href="moban.html">模板展示</a></li>
+            <li><a href="liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="mv.html" target="_blank">学无止境</a> </li>
+            <li><a href="study.html" target="_blank">闲言碎语</a></li>
+            <li><a href="moban.html" target="_blank">模板展示</a></li>
         </ul>
         <!--/*时钟开始*/-->
         <div id="fancyClock">
