--- a/html/liuyanban.html
+++ b/html/liuyanban.html
@@ -7,10 +7,11 @@
 </head>
 <link href="../css/liuyanban.css" rel="stylesheet"/>
 <link href="../css/publick.css" rel="stylesheet"/>
+<link href="../css/groundLessTalk.css" rel="stylesheet"/>
 <script src="../js/jquery-1.11.1.min.js"></script>
 <script src="../js/ajax.js"></script>
 <script src="../js/publick.js"></script>
-<script src="../js/liuyan.js"></script>
+
 <body>
 <p class="header">
     <a class="login" href="login.html">登录</a>
@@ -47,61 +48,27 @@
     <div class="head_right">
 
         <ul id="nav_list" class="nav">
-            <li><a class="a"href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a>
+            <li><a class="a" href="../index.html" target="_blank">首页</a></li>
+            <li><a href="world.html" target="_blank">我的世界</a>
                 <div class="nav_div">
                     <ol>
-                        <li><a href="#">我的文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
+                        <li><a href="#" target="_blank">我的文档</a></li>
+                        <li><a href="#" target="_blank">我的乐库</a></li>
+                        <li><a href="#" target="_blank">慢生活</a></li>
+                        <li><a href="#" target="_blank">旅行</a></li>
+                        <li><a href="#" target="_blank">我的梦</a></li>
+                        <li><a href="#" target="_blank">生涯</a></li>
+                        <li><a href="#" target="_blank">我的好友</a></li>
+                        <li><a href="#" target="_blank">最近心情</a></li>
+                        <li><a href="#" target="_blank">我的乐库</a></li>
                     </ol>
                 </div>
             </li>
-            <li><a href="webEcharts.html">web前端</a>
-                <div class="nav_div"  style="display:none">
-                    <ol>
-                        <li><a href="#">个人文档</a></li>
-                        <li><a href="http://localhost/musicdianbo/html/index2.html">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li><a href="liuyanban.html">留言版</a></li>
-            <li><a href="mv.html">闲言碎语</a>
-                <div class="nav_div" style="display:none">
-                    <ol>
-                        <li><a href="#">个人文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li><a href="study.html">学无止境</a></li>
-            <li><a href="moban.html">模板展示</a></li>
+            <li><a href="webEcharts.html" target="_blank">web前端</a> </li>
+            <li><a href="liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="mv.html" target="_blank">学无止境</a> </li>
+            <li><a href="study.html" target="_blank">闲言碎语</a></li>
+            <li><a href="moban.html" target="_blank">模板展示</a></li>
         </ul>
         <!--/*时钟开始*/-->
         <div id="fancyClock">
@@ -145,65 +112,255 @@
         <!--天气结束-->
     </div>
 </div>
-<div class="main">
-    <div class="main_left fl">
-        <div id="sidebar">
-            <div id="user" style="margin-bottom: 10px;">
-                <h4><span id="userinfo"class="fl" ></span> <a href="#" class="fl"  id="logout">退出</a></h4>
-            </div>
-
-            <!-- 注册 -->
-            <div id="reg" class="box">
-                <h4 class="regh4">注册</h4>
-                <div>
-                    <p><input type="text" class="input" name="username" id="username1"placeholder="请输入用户名"></p>
-                    <p id="verifyUserNameMsg"></p>
-                    <p><input type="password" class="input" name="password" id="password1" placeholder="请输入密码"></p>
-                    <a href="#" class="regh4" id="btnReg" >注册</a>
-                </div>
-            </div>
-
-            <!-- 登陆 -->
-            <div id="login" class="reg box">
-                <h4 class="regh4">欢迎登陆</h4>
-                <div>
-                    <p><input type="text"  class="input" name="username2" id="username2" placeholder="请输入用户名"></p>
-                    <p><input type="password"class="input"  name="password2" id="password2"placeholder="请输入密码"></p>
-
-                    <a href="#" class="regh4" id="btnLogin" >登录</a>
-                </div>
-            </div>
-            <!-- 留言发表 -->
-            <div id="sendBox"  class="box">
-                <h4>发表留言</h4>
-                <div>
-                    <textarea id="content"></textarea>
-                    <a href="#" class="regh4"  id="btnPost" >提交</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="main_right fr">
-        <p class="page"><span>第<em class="em1"></em>页/</span><span>共<em class="em2"></em>页</span></p>
+<ul class="snowfx">
+        <li class="snow1"></li><li class="snow2"></li><li class="snow3"></li><li class="snow4"></li><li class="snow5"></li><li class="snow6"></li><li class="snow7"></li><li class="snow8"></li><li class="snow9"></li><li class="snow10"><li class="snow11"><li class="snow12"></li>
+   </ul>
+<div class="content">
+  <div class="wrapper">
+    <div class="light"><i></i></div>
+    <hr class="line-left">
+    <hr class="line-right">
+    <div class="main">
+      <h1 class="title">微俱聚更新日志</h1>
+      <div class="year">
+        <h2><a href="#">2014年<i></i></a></h2>
         <div class="list">
-            <!--
-            <dl>
-                <dt>
-                    <span><img src="../images/2.jpg" class="fl" /><a href="#"class="fl">徐子淇</a></span>
-                </dt>
-                <dd>
-                    内容
-                </dd>
-                <dd class="bot_dd">
-                    <span class="time">时间</span>
-                    <a href="javascript:;"class="ding" id="support">顶(<span>0</span>)</a>
-                    <a href="javascript:;" class="ding"id="oppose">踩(<span>0</span>)</a>
-                </dd>
-            </dl>
-            -->
+          <ul>
+            <li class="cls highlight">
+              <p class="date">3月26日</p>
+              <p class="intro">微俱聚硬件微美图正式推出</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>首创微信集商务、娱乐一体化多媒体智能终端机微美图打印机</p>
+                <p>营销推广活动支持导入SN码</p>
+                <p>微商城模板，支持分类列表</p>
+                <p>微商城完整支持微信支付</p>
+                <p>微商城数据统计显示顺序更正</p>
+                <p>微商城支持商品预览</p>
+                <p>微商城订单成功后，网页将收到新订单通知</p>
+                <p>幸运机活动时间延长至三个月等6个改进及Bug</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">3月19日</p>
+              <p class="intro">全新会员卡3.0、微官网3.0、微商城2.0上线，渠道统计模块上线！</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>会员卡手机端会员卡页面全部改版，给用户更时尚大方的体验</p>
+                <p>会员卡完全自定义会员用户信息</p>
+                <p>会员卡支持领卡手机短信验证</p>
+                <p>会员卡支持快捷充值，余额支付</p>
+                <p>会员卡支持领取优惠券，代金券，礼品券</p>
+                <p>会员卡支持开卡即送功能，包括开卡送优惠券，送积分，送代金券等等</p>
+                <p>会员卡积分支持兑换礼品券</p>
+                <p>会员卡支持给用户发送通知</p>
+                <p>微商城中添加搜索框，增加商品的模糊匹配</p>
+                <p>微商城中不同的商品详情，支持不同的配置</p>
+                <p>微商城订单文档说明文字更详尽，并同时同步到订单说明里面</p>
+                <p>微商城商品自动审核优化, 防止过滤过严</p>
+                <p>微商城列表展现页的图片支持自适应大小</p>
+                <p>微商城将图文与商品整合，提供统一的商品配置</p>
+                <p>微官网提供多套底部导航菜单</p>
+                <p>微官网的分类支持高级分类，高级分类同时也可以设置模板</p>
+                <p>微官网支持背景动画</p>
+                <p>微官网支持背景音乐</p>
+                <p>渠道统计功能上线，用户可以通过生成二维码统计各渠道新增的粉丝</p>
+                <p>美化门店的手机UI界面，并提供外链访问</p>
+                <p>修复微活动的活动封面无法更换等5个Bug</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">3月12日</p>
+              <p class="intro">首家支持微信支付，多客服系统上线！</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>为公众账号的微信支付提供技术接入，通过简单配置即可使用微信支付</p>
+                <p>微信公众平台高级接口支持，通过认证的服务号可以使用多客服系统回复粉丝</p>
+                <p>微商城首页添加多套模板，详情页支持模板自定义，商城购买商品支持微信支付；商城首页图片自适应等等十多个细节改进</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">3月5日</p>
+              <p class="intro">360全景隆重上线！</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>全新360全景模块上线，3D看房、3D看车、3D看实景，一网打尽</p>
+                <p>微官网新增24套一级模板</p>
+                <p>微官网提供全局颜色调色器</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">2月26日</p>
+              <p class="intro">微婚庆行业应用上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>提供更加友好的套餐价格</p>
+                <p>提供经典案例，并可以二维码扫描</p>
+                <p>提供更新日志，让您每周有惊喜</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">2月19日</p>
+              <p class="intro">微信墙(微信大屏幕)上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>支持上墙、抽奖、投票等等功能的微信墙上线</p>
+                <p>修正一战到底等多个模块的13个Bug, 并提供7个新改进</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">2月12日</p>
+              <p class="intro">微贺卡上线</p>
+              <p class="version"></p>
+            </li>
+            <li class="cls highlight">
+              <p class="date">1月</p>
+              <p class="intro">微俱聚V6.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>确立每周迭代、周三发布，用户参与推动模块开发的小米模式</p>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div id="showMore">显示更多...</div>
+      </div>
+      <div class="year">
+        <h2><a href="#">2013年<i></i></a></h2>
+        <div class="list">
+          <ul>
+            <li class="cls">
+              <p class="date">12月</p>
+              <p class="intro">微俱聚V5.4上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>形成完整的基础服务+互动推广+业务管理+行业应用+应用商店的服务架构</p>
+                <p>注册用户突破10万，荣获“创业之星”大赛八强</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">11月</p>
+              <p class="intro">微俱聚v5.3上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>全新渠道代理管理后台上线，更便捷更强大</p>
+                <p>荣获2013年微应用最佳服务商</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">10月</p>
+              <p class="intro">微俱聚V5.2上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>与众多行业建立合作，推出多个行业解决方案</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">9月</p>
+              <p class="intro">微俱聚V5.1上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>发力行业O2O应用，为商家提供量身定制的行业方案</p>
+              </div>
+            </li>
+            <li class="cls highlight">
+              <p class="date">8月</p>
+              <p class="intro">全新微俱聚平台V5.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>推出微信应用商店，为商家提供更丰富的应用选择</p>
+                <p>整合众多优秀微信应用，打造微应用分发平台</p>
+              </div>
+            </li>
+            <li class="cls highlight">
+              <p class="date">7月</p>
+              <p class="intro">微信加更名为微俱聚</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>出于品牌和商标保护的考虑，微信加平台更名</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">6月</p>
+              <p class="intro">微信加V4.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>微信在线预约、更多微信互动模块和微官网模板，商家业务展现日渐丰富</p>
+                <p>签约《中国好声音》，成为其微信独家战略合作伙伴</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">5月</p>
+              <p class="intro">微信加V3.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>推出微信会员卡、微信团购等业务模块，打通更多商家业务</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">4月</p>
+              <p class="intro">微信加V2.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>推出微官网等微信业务模块，实现微信与商家业务对接</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">3月</p>
+              <p class="intro">微信加V1.0上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>微信基础服务模块+微信互动推广模块上线</p>
+                <p>创造微信公众号一周涨5万粉的奇迹</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">1月</p>
+              <p class="intro">全网第一个微信刮刮卡、大转盘上线</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>微信互动推广模块上线，用实际行动证明微信鸡汤有毒</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="year">
+        <h2><a href="#">2012年<i></i></a></h2>
+        <div class="list">
+          <ul>
+            <li class="cls">
+              <p class="date">8月</p>
+              <p class="intro">顿悟</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>顿悟，微信公众平台是企业移动互联网化的入口</p>
+              </div>
+            </li>
+            <li class="cls">
+              <p class="date">8月以前</p>
+              <p class="intro">实现一个NB的社会化APP</p>
+              <p class="version">&nbsp;</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="year">
+        <h2><a href="#">2012年以前<i></i></a></h2>
+        <div class="list">
+          <ul>
+            <li class="cls">
+              <p class="date">&nbsp;</p>
+              <p class="intro">适用浏览器：IE8、360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗.</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p></p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <div class="bottom">
     <ul>
@@ -217,5 +374,16 @@
     </ul>
     <p>Design by 半夏微凉$不言殇 友情链接QQ：2642316974</p>
 </div>
+<script>
+    $(".main .year .list").each(function (e, target) {
+        var $target=  $(target),
+            $ul = $target.find("ul");
+        $target.height($ul.outerHeight()), $ul.css("position", "absolute");
+    }); 
+    $(".main .year>h2>a").click(function (e) {
+        e.preventDefault();
+        $(this).parents(".year").toggleClass("close");
+    });
+    </script>
 </body>
 </html>
