--- a/html/login.html
+++ b/html/login.html
@@ -7,20 +7,22 @@
 </head>
 <link href="../css/login.css" rel="stylesheet"/>
 <script src="../js/jquery-1.11.1.min.js"></script>
-<script src="../js/ajax.js"></script>
+<!-- <script src="../js/ajax.js"></script>-->
 <script src="../js/publick.js"></script>
-<script src="../js/guestbook.js"></script>
+<!-- <script src="../js/guestbook.js"></script>  -->
+
 <body style="background:url(../images/8.jpg) no-repeat;background-size:100% 100%">
 <div id="user" style="margin-bottom: 10px;">
     <h4><span id="userinfo"></span> <a href="" id="logout">退出</a></h4>
 </div>
 <div id="login" class="reg">
     <h4 class="regh4">欢迎登陆</h4>
-    <div class="regdiv">
+    <div class="regdiv login">
         <p class="reg_p"><input type="text" name="username2" id="username2" placeholder="请输入用户名"></p>
         <p class="reg_p"><input type="password" name="password2" id="password2" placeholder="请输入密码"></p>
         <input type="checkbox" class="check fl"/><a href="#" class="check_a fl">记住密码</a>
         <div style="clear:both;"></div>
+         <p class="tishi" id="logintip">cuowu</p>
         <p class="reg_p">
             <span class="fl" id="zhucebtn"><a href="#">注册</a></span>
             <span class="fr find" id=""><a href="#">找回密码</a></span>
@@ -37,5 +39,44 @@
         <a href="javascript:void(0)" class="reg_a" id="btnReg">注册</a>
     </div>
 </div>
+
+<script type="text/javascript">
+    $("#btnLogin").click(function(){
+       if($("#username2").val()===""){
+            $("#logintip").css("display","block");
+            $("#logintip").html("账号不能为空");
+       }else if($("#password2").val()===""){
+            $("#logintip").css("display","block");
+            $("#logintip").html("密码不能为空");
+       }else if($("#password2").val().length<=6){
+            $("#logintip").html("密码不能少于6位");
+       }else {
+         $("#logintip").css("display","none");
+        window.location="../index.html";
+       }
+    });
+
+    $("#btnReg").click(function(){
+         if($("#username1").val()===""){
+            $("#verifyUserNameMsg").css("display","block");
+            $("#verifyUserNameMsg").html("账号不能为空");
+       }else if($("#password1").val()===""){
+            $("#logintip").css("display","block");
+            $("#verifyUserNameMsg").html("设置密码不能为空");
+       }else if($("#password1").val().length<=6){
+            $("#verifyUserNameMsg").html("设置密码不能少于6位");
+       }else {
+         $("#verifyUserNameMsg").css("display","none");
+            $("#regist").css("display","none");
+            $("#login").css("display","block");
+       }
+    });
+
+    $("#zhucebtn").click(function(){
+         $("#regist").css("display","block");
+        $("#login").css("display","none");
+    });
+</script>
 </body>
+
 </html>
