--- a/html/world.html
+++ b/html/world.html
@@ -44,13 +44,13 @@
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a" href="../index.html">首页</a></li>
-            <li><a href="world.html">我的世界</a><li><a href="webEcharts.html">web前端</a>
+            <li><a class="a" href="../index.html" target="_blank">首页</a></li>
+            <li><a href="world.html" target="_blank">我的世界</a><li><a href="webEcharts.html">web前端</a>
             </li>
-            <li><a href="liuyanban.html">留言版</a></li>
-            <li><a href="mv.html">闲言碎语</a> </li>
-            <li><a href="study.html">学无止境</a></li>
-            <li><a href="moban.html">模板展示</a></li>
+            <li><a href="liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="mv.html" target="_blank">学无止境</a> </li>
+            <li><a href="study.html" target="_blank">闲言碎语</a></li>
+            <li><a href="moban.html" target="_blank">模板展示</a></li>
         </ul>
         <!--/*时钟开始*/-->
         <div id="fancyClock">
