--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a" href="index.html">首页</a></li>
-            <li><a href="html/world.html">我的世界</a>
+            <li><a class="a" href="index.html" target="_blank">首页</a></li>
+            <li><a href="html/world.html" target="_blank">我的世界</a>
                 <div class="nav_div">
                     <ol>
-                        <li><a href="#">我的文档</a></li>
-                        <li><a href="#">我的乐库</a></li>
-                        <li><a href="#">慢生活</a></li>
-                        <li><a href="#">旅行</a></li>
-                        <li><a href="#">我的梦</a></li>
-                        <li><a href="#">生 涯</a></li>
-                        <li><a href="#">我的好友</a></li>
-                        <li><a href="#">最近心情</a></li>
-                        <li><a href="#">我的乐库</a></li>
+                        <li><a href="#" target="_blank">我的文档</a></li>
+                        <li><a href="#" target="_blank">我的乐库</a></li>
+                        <li><a href="#" target="_blank">慢生活</a></li>
+                        <li><a href="#" target="_blank">旅行</a></li>
+                        <li><a href="#" target="_blank">我的梦</a></li>
+                        <li><a href="#" target="_blank">生 涯</a></li>
+                        <li><a href="#" target="_blank">我的好友</a></li>
+                        <li><a href="#" target="_blank">最近心情</a></li>
+                        <li><a href="#" target="_blank">我的乐库</a></li>
                     </ol>
                 </div>
             </li>
-            <li><a href="html/webEcharts.html">Web前端</a></li>
-            <li><a href="html/liuyanban.html">留言版</a></li>
-            <li><a href="html/mv.html">闲言碎语</a></li>
-            <li><a href="html/study.html">学无止境</a></li>
-            <li><a href="html/moban.html">模板展示</a></li>
+            <li><a href="html/webEcharts.html" target="_blank">Web前端</a></li>
+            <li><a href="html/liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="html/mv.html" target="_blank">学无止境</a></li>
+            <li><a href="html/study.html" target="_blank">闲言碎语</a></li>
+            <li><a href="html/moban.html" target="_blank">模板展示</a></li>
         </ul>
         <!--/*时钟开始*/-->
         <div id="fancyClock">
