--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <script src="js/blog.js"></script>
 <body >
 <p class="header">
-    <a class="login" href="html/login.html">登录傻逼ing</a>
-    <a class="huanfu" href="#">换肤傻逼ing</a>
+    <a class="login" href="html/login.html">登录</a>
+    <a class="huanfu" href="#">换肤</a>
 </p>
 <div class="huanfu_box">
     <img src="images/close.svg" class='close'/>
