--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
@@ -12,8 +12,8 @@
 <script src="js/blog.js"></script>
 <body >
 <p class="header">
-    <a class="login" href="html/login.html">登录</a>
-    <a class="huanfu" href="#">换肤</a>
+    <a class="login" href="html/login.html">登录*</a>
+    <a class="huanfu" href="#">换肤**</a>
 </p>
 <div class="huanfu_box">
     <img src="images/close.svg" class='close'/>
@@ -61,8 +61,8 @@
                     </ol>
                 </div>
             </li>
-            <li><a href="html/webEcharts.html" target="_blank">Web前端</a></li>
-            <li><a href="html/liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="html/webEcharts.html" target="_blank">Echarts</a></li>
+            <li><a href="html/liuyanban.html" target="_blank">时间轴</a></li>
             <li><a href="html/mv.html" target="_blank">学无止境</a></li>
             <li><a href="html/study.html" target="_blank">闲言碎语</a></li>
             <li><a href="html/moban.html" target="_blank">模板展示</a></li>
