--- a/html/mv.html
+++ b/html/mv.html
@@ -50,7 +50,7 @@
         <ul id="nav_list" class="nav">
             <li><a class="a"href="../index.html" target="_blank">首页</a></li>
             <li><a href="world.html" target="_blank">我的世界</a></li>
-            <li><a href="webEcharts.html">Web前端</a>
+            <li><a href="webEcharts.html">Echarts</a>
                 <div class="nav_div"  style="display:none">
                     <ol>
                         <li><a href="#" target="_blank" target="_blank">个人文档</a></li>
@@ -68,7 +68,7 @@
                     </ol>
                 </div>
             </li>
-            <li><a href="liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="liuyanban.html" target="_blank">时间轴</a></li>
             <li><a href="mv.html" target="_blank">学无止境</a></li>
             <li><a href="study.html" target="_blank">闲言碎语</a></li>
             <li><a href="moban.html" target="_blank">模板展示</a></li>
@@ -281,35 +281,47 @@
     <div class="section_w">
             <!--最新文章开始-->
             <div class="tuijian word_tuij">
-                <p class="hot_title"><img src="../images/Web (1).svg" class="fl"/>最新文章<span class="fr" style="width:50%;"></span></p>
+                <p class="hot_title"><img src="../images/Web (1).svg" class="fl"/>博主推荐<span class="fr" style="width:50%;"></span></p>
                 <ul>
-                    <li><span>1</span><a href="#">IP要突破2000+了</a></li>
-                    <li><span>2</span><a href="#">帝国cms首页、自定义页面如何实现分页</a></li>
-                    <li><span>3</span><a href="#">【已评选】给我模板PSD源文件，我给你设计</a></li>
-                    <li><span>4</span><a href="http://extjs-doc-cn.github.io/ext4api/">【郑重申明】本站只提供静态模板下载！</a></li>
-                    <li><span>5</span><a href="#">【孕期日记】生活本该如此</a></li>
-                    <li><span>6</span><a href="#">【匆匆那些年】总结个人博客经历的这四</a></li>
-                    <li><span>7</span><a href="#">2014年度优秀个人博客排名公布</a></li>
-                    <li><span>8</span><a href="http://extjs-doc-cn.github.io/ext4api/">2014年度优秀个人博客评选活动</a></li>
-                    <li><span>9</span><a href="#">使用CSS3制作文字、图片倒影</a></li>
-                    <li><span>10</span><a href="#">【活动作品】柠檬绿兔小白个人博客模板</a></li>
+                    <li><span>1</span><a href="https://blog.csdn.net/yl_cc/article/details/72676538" target="_blank">Git如何把本地代码推送到远程仓库</a></li>
+                    <li><span>2</span><a href="http://es6.ruanyifeng.com/" target="_blank">ECMAScript6第三版</a></li>
+                    <li><span>3</span><a href="https://blog.csdn.net/qq_39627461/article/details/79368336" target="_blank">一位阿里架构师在2018年给每个程序员的小建议</a></li>
+                    <li><span>4</span><a href="https://blog.csdn.net/qq_39627461/article/details/79073747" target="_blank">为什么80%的程序员进不了阿里, 京东? (面试题及答案)</a></li>
+                    <li><span>5</span><a href="https://blog.csdn.net/qq_39627461/article/details/79120993" target="_blank">「独家」阿里、百度面试Java高级程序员的面试题及答案</a></li>
+                    <li><span>6</span><a href="https://blog.csdn.net/qq_39627461/article/details/79557386" target="_blank">年薪50w+的阿里p7专家，顶尖的技术人才，只因做到了这几点</a></li>
+                    <li><span>7</span><a href="https://blog.csdn.net/qq_39627461/article/details/78991886" target="_blank">这些分布式知识, BAT的架构师都在用！！！</a></li>
+                    <li><span>8</span><a href="https://blog.csdn.net/yl_cc/article/details/40426843" target="_blank">dos命令大全（经典收集）</a></li>
+                    <li><span>9</span><a href="https://www.cnblogs.com/iloverain/p/5557675.html" target="_blank">强烈推荐 | 百度、阿里、腾讯 40 道面试题超全面总结 </a></li>
+                    <li><span>10</span><a href="https://juejin.im/post/5abf68886fb9a028b54802e0" target="_blank">（干货）记前端工程师面试题，一起带大家理一理</a></li>
                 </ul>
             </div>
             <!--最新文章开始-->
             <!--最新模板开始-->
             <div class="tuijian word_tuij">
-                <p class="hot_title" style="margin-top:25px"><img src="../images/Web (1).svg"class="fl"/>最新模板<span class="fr" style="width:50%;"></span></p>
+                <p class="hot_title" style="margin-top:25px"><img src="../images/Web (1).svg"class="fl"/>课程分类<span class="fr" style="width:50%;"></span></p>
                 <ul>
-                    <li><span>1</span><a href="http://www.yangqq.com/download/div/2016-09-11/752.html">个人博客评测，你敢来，我就敢说！（第一</a></li>
-                    <li><span>2</span><a href="http://www.yangqq.com/download/div/2015-06-28/748.html">个人博客《草根寻梦》—手机版模板</a></li>
-                    <li><span>3</span><a href="http://www.yangqq.com/download/div/2015-04-10/746.html">【活动作品】柠檬绿兔小白个人博客模板</a></li>
-                    <li><span>4</span><a href="http://extjs-doc-cn.github.io/ext4api/">【郑重申明】本站只提供静态模板下载！</a></li>
-                    <li><span>5</span><a href="http://www.yangqq.com/download/div/2014-09-18/730.html">情侣博客模板系列之《回忆》Html</a></li>
-                    <li><span>6</span><a href="http://www.yangqq.com/download/div/2014-08-18/727.html">情侣博客模板系列之《回忆》PSD</a></li>
-                    <li><span>7</span><a href="http://www.yangqq.com/download/div/2014-08-11/726.html">情侣博客模板系列之《初夏》Html</a></li>
-                    <li><span>8</span><a href="http://extjs-doc-cn.github.io/ext4api/">2014年度优秀个人博客评选活动</a></li>
-                    <li><span>9</span><a href="http://www.yangqq.com/download/div/2014-06-13/689.html">个人博客模板《世界杯来袭》</a></li>
-                    <li><span>10</span><a href="情侣博客模板系列之《初夏》PSD">【活动作品】柠檬绿兔小白个人博客模板</a></li>
+                    <li><a href="#" target="_blank" id="course">java</a></li>
+                    <li><a target="_blank" href="https://juejin.im/entry/5ac6fab451882555677ecaf1">我的Java设计模式-责任链模式</a></li>
+                    <li><a target="_blank" href="https://www.zhihu.com/question/21142149">Java新手如何学习Spring、Struts、Hibernate三大框架？</a></li>
+                    <li><a target="_blank" href="https://blog.csdn.net/cjc6868/article/details/9531483">给入门级程序员的5点建议</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac442946fb9a028d700cfdf">Java开发必须掌握的线上问题排查命令</a></li>
+                      <li><a target="_blank" href="#"  id="course">前端</a></li>
+                    <li><a target="_blank" href="file:///D:/Git/Git/test1/blog/html/mv.html">想偷懒的话，toLocaleString 了解一下？</a></li>
+                    <li><a target="_blank" href="https://juejin.im/entry/5ac636f56fb9a028c71eae55">从头实现一个koa框架</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac2329b6fb9a028bf057caf">基础知识】Flex-弹性布局原来如此简单！！</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5abdd6f6f265da23793c4458">不好意思！耽误你的十分钟，让MVVM原理还给你</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5abf531d6fb9a028dc412419">ES6会这些就够了</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac2fb886fb9a028b86e328c">面试官:既然React/Vue可以用Event Bus进行组件通信,你可以实现下吗?</a></li>
+                    <li><a target="_blank" href="https://juejin.im/entry/5ac49ac35188255c2722271e">中国第四届 CSS 大会 PPT 合集</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac1d117f265da2396128b9f">2018 前端性能检查表</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5a2cdfe26fb9a0452936b07f">🛠Git 常用操作总结</a></li>
+
+                    <li><a target="_blank" href="#" target="_blank" id="course">后端</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac46cfd5188255583597562">分析Ajax爬取今日头条街拍美图</a></li>
+                    <li><a target="_blank" href="https://juejin.im/post/5ac23a9bf265da23830b0f15">用Node.js写爬虫，撸羞羞的图片</a></li>
+                     <li><a target="_blank" href="https://juejin.im/post/5ac04f206fb9a028d1413bf2">Java开发必会的Linux命令</a></li>
+                    <li><a target="_blank" href="https://juejin.im/entry/5ac32368f265da23750715b2">关于Python 操作 MySQL ，这才是正确姿势</a></li>
+
                 </ul>
             </div>
             <!--最新模板结束-->
