--- a/html/study.html
+++ b/html/study.html
@@ -46,7 +46,7 @@
     <div class="head_right">
         <ul id="nav_list" class="nav">
             <li><a class="a" href="../index.html" target="_blank">首页</a></li>
-            <li><a href="world.html" target="_blank">我的世界</a><li><a href="webEcharts.html">web前端</a>
+            <li><a href="world.html" target="_blank">我的世界</a><li><a href="webEcharts.html">Echarts</a>
             <div class="nav_div"  style="display:none">
                 <ol>
                     <li><a href="#" target="_blank">个人文档</a></li>
@@ -64,7 +64,7 @@
                 </ol>
             </div>
         </li>
-            <li><a href="liuyanban.html" target="_blank">留言版</a></li>
+            <li><a href="liuyanban.html" target="_blank">时间轴</a></li>
             <li><a href="mv.html" target="_blank">学无止境</a> </li>
             <li><a href="study.html" target="_blank">闲言碎语</a></li>
             <li><a href="moban.html" target="_blank">模板展示</a></li>
