--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a" href="index.html" target="_blank">首页</a></li>
-            <li><a href="html/world.html" target="_blank">我的世界</a>
+            <li><a class="a" href="index.html" target="_blank">首页ing</a></li>
+            <li><a href="html/world.html" target="_blank">我的世界ing</a>
                 <div class="nav_div">
                     <ol>
                         <li><a href="#" target="_blank">我的文档</a></li>
